--- a/aten/src/ATen/CMakeLists.txt
+++ b/aten/src/ATen/CMakeLists.txt
@@ -81,6 +81,9 @@ FILE(GLOB native_sparse_hip_cpp "native/sparse/hip/*.cpp")
 FILE(GLOB native_quantized_hip_hip "native/quantized/hip/*.hip")
 FILE(GLOB native_quantized_hip_cpp "native/quantized/hip/*.cpp")
 
+FILE(GLOB tvm_h "tvmop/*.h")
+FILE(GLOB tvm_cpp "tvmop/*.cpp")
+
 add_subdirectory(quantized)
 set(all_cpu_cpp ${base_cpp} ${ATen_CORE_SRCS} ${native_cpp} ${native_sparse_cpp} ${native_quantized_cpp} ${native_mkl_cpp} ${native_mkldnn_cpp} ${generated_cpp} ${ATen_CPU_SRCS} ${ATen_QUANTIZED_SRCS} ${cpu_kernel_cpp})
 if(AT_MKL_ENABLED)
@@ -88,6 +91,9 @@ if(AT_MKL_ENABLED)
 endif()
 if(AT_MKLDNN_ENABLED)
   set(all_cpu_cpp ${all_cpu_cpp} ${mkldnn_cpp})
+endif()
+if (USE_TVM)
+  set(all_cpu_cpp ${all_cpu_cpp} ${tvm_cpp})
 endif()
 
 if(USE_CUDA AND USE_ROCM)
@@ -128,6 +134,16 @@ IF (USE_TBB)
   message("ATen is compiled with TBB (${TBB_ROOT_DIR})")
   list(APPEND ATen_CPU_INCLUDE ${TBB_ROOT_DIR}/include)
   list(APPEND ATen_CPU_DEPENDENCY_LIBS tbb)
+ENDIF()
+
+# TVM tensor authoring
+if (USE_TVM) 
+  message("Adding TVM header include path: ${TVM_PATH}")
+  list(APPEND ATen_CPU_INCLUDE ${TVM_PATH}/include)
+  list(APPEND ATen_CPU_INCLUDE ${TVM_PATH}/3rdparty/dlpack/include)
+  list(APPEND ATen_CPU_INCLUDE ${TVM_PATH}/3rdparty/dlpack/include)
+  list(APPEND ATen_CPU_INCLUDE ${TVM_PATH}/3rdparty/dmlc-core/include)
+  list(APPEND ATen_CPU_DEPENDENCY_LIBS ${TVM_PATH}/build/libtvm_runtime.dylib)
 ENDIF()
 
 IF(BLAS_FOUND)
@@ -428,7 +444,7 @@ INSTALL(FILES "${CMAKE_CURRENT_BINARY_DIR}/cmake-exports/ATenConfig.cmake"
   DESTINATION "${AT_INSTALL_SHARE_DIR}/cmake/ATen")
 
 # https://stackoverflow.com/questions/11096471/how-can-i-install-a-hierarchy-of-files-using-cmake
-FOREACH(HEADER ${base_h} ${ATen_CORE_HEADERS} ${cuda_h} ${cudnn_h} ${hip_h} ${miopen_h})
+FOREACH(HEADER ${base_h} ${ATen_CORE_HEADERS} ${cuda_h} ${cudnn_h} ${hip_h} ${miopen_h} ${tvm_h})
   string(REPLACE "${CMAKE_CURRENT_SOURCE_DIR}/" "" HEADER_SUB ${HEADER})
   GET_FILENAME_COMPONENT(DIR ${HEADER_SUB} DIRECTORY)
   INSTALL(FILES ${HEADER} DESTINATION ${AT_INSTALL_INCLUDE_DIR}/ATen/${DIR})
